feat(examples): pin every release's client runtime, and name what moved
`examples/minecraft_client_test` was wired to one release, 1.21.11, while its
only consumer covers the SDK's whole catalog of 43. This is the half of closing
that gap which does not depend on the game's world-creation API: the feature
plumbing, the library pins, and the four call sites that moved for reasons
unrelated to creating a world.

`gen-client-runtime.py` now writes every release rather than one. It reads the
release list and each release's metadata digest out of `examples/minecraft`'s
own `const CATALOG`, so no list is copied and no mutable version manifest is
consulted; it reads the pre-1.19 `natives` + `downloads.classifiers` shape that
12 releases carry and that it previously refused outright; it drops a jar an
older metadata lists twice; and it renames through a temporary file so a killed
run cannot truncate a committed build script. 2287 rows, 379 distinct jars.

`build.rhai` holds those rows as data and loops over them, in the same
`const CATALOG` idiom `examples/minecraft/build.rhai` already uses — 288 KB
against a 1 MiB script ceiling, where 43 verbatim blocks of the old four-line
shape would have been 693 KB.

The feature plumbing separates two questions that used to be one key. `enabled`
says the harness is wanted and routes the client side; a release feature routes
the release and names its threshold. Because the SDK is one node reached from
both sides of a diamond, a consumer's `jals test --features 1.20.1` therefore
resolves exactly the SDK selection its `jals build --features 1.20.1` does —
no library fetch, no client jar, `GameClient.java` blanked whole.

`GameClient.java` is Java 8 source now, because the oldest releases are Java 8
class files and the harness is loaded by the JVM the release runs on. Four
constructs went: `Path.of`, `Files.writeString`, `Stream.toList` and pattern
`instanceof`, plus `ProcessHandle` for the run directory's name.

`runCommand` is dispatche